[package]
name = "signal-to-noise"
version = "3.0.0"
edition = "2024"
authors = ["maurdekye"]

[dependencies]
chrono = "0.4.39"
clap = { version = "4.5.28", features = ["cargo", "derive"] }
clipboard-rs = "0.2.3"
crevice = "0.17.0"
csv = "1.3.1"
ggez = { git = "https://github.com/Maurdekye/ggez.git", branch = "devel" }
glam = { version = "0.29.2", features = ["serde"] }
log = { version = "0.4.25", features = ["std"] }
rand = "0.9.0"
serde = "1.0.217"
ggez-no-re = { path = "ggez-no-re" }